# HinaCloth

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  PROJECT_STATUS_AND_ROADMAP.md  README.md  ROADMAP.md  ROADMAP_XPBD.md  dev_tutorial.md  evaluation.md  inspections.xml  main.cpp  proposed_final_deps.md  roadmap.md
.github/workflows/: ci.yml  linux-build.yml  linux.yml  macos-build.yml  macos.yml  windows-build.yml  windows.yml
blender/: __init__.py  blender_manifest.toml  link.ps1
blender/ops/: __init__.py  bake.py  modal.py
blender/props/: __init__.py  settings.py
blender/solver/: __init__.py  manager.py
blender/ui/: __init__.py  panel.py
cmake/: setup_blender.cmake  setup_imgui.cmake  setup_pybind.cmake  setup_sdl3.cmake  setup_tbb.cmake  setup_vkbootstrap.cmake  setup_vma.cmake
example/: demo1.blend  demo1.py
examples/: CMakeLists.txt  e_bench.cpp  e_flag.cpp  e_max.cpp  e_min.cpp  e_pin.cpp  e_smoke.cpp  ex00_minimal.cpp  ex01_policy_and_query.cpp  ex02_runtime_commands.cpp  ex03_attachment.cpp  ex04_bending.cpp  ex05_blocked_avx2.cpp  ex06_bench_cli.cpp  ex_01_all_features.cpp  example.cpp  example_xpbd.cpp  main.cpp  vx00_window.cpp  vx01_sim_overview.cpp  vx02_sim_controls.cpp  vx_xpbd_hina.cpp  xpbd_vulkan.cpp
examples/shader/: cloth.frag  cloth.vert  cloth_lines.frag  cloth_lines.vert  cloth_lit.frag  cloth_lit.vert  cloth_outline.frag  cloth_outline.vert  cloth_shadow.frag  cloth_shadow.vert  shadow_depth.vert  xpbd.frag  xpbd.vert
include/: cloth_grid_utils.h  cloth_types.h  xpbd_params.h
include/aligned/: cloth_data_aligned.h  solver_xpbd_aligned.h
include/aos/: cloth_data_aos.h  solver_xpbd_aos.h
include/aosoa/: cloth_data_aosoa.h  solver_xpbd_aosoa.h
include/rphys/: api_algorithm.h  api_capability.h  api_commands.h  api_coupling.h  api_domain.h  api_events.h  api_fields.h  api_ids.h  api_params.h  api_scene.h  api_status.h  api_telemetry.h  api_version.h  api_world.h  forward.h
include/soa/: cloth_data_soa.h  solver_xpbd_soa.h
src/: aligned_allocator.h  api_impl.cpp  api_stubs.cpp  cloth_data.h  cloth_data_2.h  solver_xpbd_aligned.cpp  solver_xpbd_aos.cpp  solver_xpbd_aosoa.cpp  solver_xpbd_soa.cpp  xpbd.cpp  xpbd.h  xpbd2.cpp  xpbd2.h  xpbd_pybind.cpp
src/adapter/: engine_adapter.cpp  engine_adapter.h
src/algo_sandbox/: diff_fields.cpp  diff_fields.hpp  param_scan_tool.cpp  param_scan_tool.hpp  run_matrix.cpp  run_matrix.hpp
src/api/: build.h  capability.h  chosen.h  commands.h  events_in.h  ids.h  operators_in.h  parameters_in.h  policy_in.h  sim.h  space_in.h  state_in.h  status.h  telemetry.h  topology_in.h  version.h
src/api_layer/: api_world.cpp  gateway_algorithm.cpp  gateway_algorithm.hpp  gateway_coupling.cpp  gateway_coupling.hpp  gateway_domain.cpp  gateway_domain.hpp  gateway_fields.cpp  gateway_fields.hpp  gateway_world.cpp  gateway_world.hpp
src/backend/registry/: capability.cpp  capability_eng.h  cpu.cpp  cpu.h  registry.cpp  registry.h
src/backend/scheduler/: seq.cpp  seq.h  tbb.cpp  tbb.h
src/backend/storage/: aos.h  aosoa.cpp  aosoa.h  soa.cpp  soa.h  view3.h
src/cooking/: cooking.cpp  cooking.h
src/core/common/: types.h  utils.h
src/core/data/: data.cpp  data.h  remap.cpp  remap.h
src/core/model/: model.cpp  model.h
src/core_base/: algo_core.cpp  algo_core.hpp  domain_core.cpp  domain_core.hpp  field_bus.cpp  field_bus.hpp  param_store.cpp  param_store.hpp  status_codes.cpp  status_codes.hpp  telemetry_core.cpp  telemetry_core.hpp  world_core.cpp  world_core.hpp
src/coupling_modules/: cloth_fluid_exchange_contract.cpp  cloth_fluid_exchange_contract.hpp  cloth_fluid_simple_drag.cpp  cloth_fluid_simple_drag.hpp  cloth_fluid_two_way_pressure.cpp  cloth_fluid_two_way_pressure.hpp  cloth_rigid_contact_contract.cpp  cloth_rigid_contact_contract.hpp  cloth_rigid_penalty.cpp  cloth_rigid_penalty.hpp  cloth_rigid_projection.cpp  cloth_rigid_projection.hpp  multi_field_mix.cpp  multi_field_mix.hpp
src/domain_cloth/: pipeline_contract.hpp
src/domain_cloth/algorithms/: fem_cloth.cpp  fem_cloth.hpp  pbd_cloth.cpp  pbd_cloth.hpp  stable_pd_cloth.cpp  stable_pd_cloth.hpp  xpbd_cloth.cpp  xpbd_cloth.hpp
src/domain_cloth/shared/: area_cache.cpp  area_cache.hpp  bending_energy.cpp  bending_energy.hpp  mesh_build.cpp  mesh_build.hpp
src/domain_fluid/: pipeline_contract.cpp  pipeline_contract.hpp
src/domain_fluid/algorithms/: flip_fluid.cpp  flip_fluid.hpp  mpm_fluid.cpp  mpm_fluid.hpp  sph_fluid.cpp  sph_fluid.hpp
src/domain_fluid/shared/: kernel_weights.cpp  kernel_weights.hpp  neighbor_search.cpp  neighbor_search.hpp
src/domain_gas/: pipeline_contract.hpp
src/domain_gas/algorithms/: grid_gas.cpp  grid_gas.hpp  lattice_boltzmann.cpp  lattice_boltzmann.hpp
src/domain_gas/shared/: advection_schemes.cpp  advection_schemes.hpp
src/domain_new_template/: pipeline_contract.hpp
src/domain_rigid/: pipeline_contract.hpp
src/domain_rigid/algorithms/: impulse_rigid.cpp  (+5 more)
src/perf_layers/: cache_accel.cpp  cache_accel.hpp  future_opt_placeholder.cpp  future_opt_placeholder.hpp  gpu_backend.cpp  gpu_backend.hpp  layout_pack.cpp  layout_pack.hpp  simd_vec.cpp  simd_vec.hpp
src/plugins/: sample_plugin_register.cpp  sample_plugin_register.hpp
src/runtime/: apply_events.cpp  apply_events.h  phases.cpp  phases.h  step.cpp  step.h  step_eng.h
src/schedulers/: gpu_stub.cpp  gpu_stub.hpp  job_system_stub.cpp  job_system_stub.hpp  serial.cpp  serial.hpp  task_pool.cpp  task_pool.hpp
src/shell/: cache_tracker.cpp  capability_api.cpp  packers.cpp  sim_commands.cpp  sim_create.cpp  sim_readback.cpp  sim_step.cpp  solver_internal.h  translators.cpp  validators.cpp
src/telemetry_export/: csv_dump.cpp  csv_dump.hpp  json_dump.cpp  json_dump.hpp
test/: CMakeLists.txt  test_bench_xpbd.cpp  test_main.cpp  test_validation_xpbd.cpp  test_world_basic.cpp
tests/: test_clothdata.cpp  test_xpbd.cpp
vulkan/: cloth_renderer.cpp  cloth_renderer.h  imgui_layer.cpp  imgui_layer.h  renderer_iface.h  vk_engine.cpp  vk_engine.h
vulkan/shaders/: cloth.frag  cloth.vert  cloth_frag_spv.inc  cloth_vert_spv.inc
(+12 files in other folders)
